[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "r9"
authors = [
    {name = "Vol Kyrylov", email = "vol@wilab.org.ua"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "loguru",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
]
